--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "JavaScript Multi-Key LRU Cache",
   "main": "index.js",
   "scripts": {
-    "test": "jshint index.js lib/ && lab -v -c test/*"
+    "doc": "jsdoc index.js -d doc",
+    "test": "jshint index.js && lab -v -c test/*"
   },
   "repository": {
     "type": "git",
@@ -20,5 +21,14 @@
   "bugs": {
     "url": "https://github.com/rsandor/mkc/issues"
   },
-  "homepage": "https://github.com/rsandor/mkc"
+  "homepage": "https://github.com/rsandor/mkc",
+  "dependencies": {
+    "lru-cache": "^2.5.0"
+  },
+  "devDependencies": {
+    "code": "^1.4.0",
+    "jsdoc": "^3.3.0-beta3",
+    "jshint": "^2.6.3",
+    "lab": "^5.5.1"
+  }
 }
